--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,13 @@
 FROM node:16-alpine
+
 #specifying the working directory
 WORKDIR /usr/app
+
 #copy package.json to the working directory
 COPY ./package.json .
+
+# Update npm
+RUN npm install -g npm@8.5.5
 
 RUN npm install
 
