--- a/.github/workflows/docker-ci-d.yml
+++ b/.github/workflows/docker-ci-d.yml
@@ -29,10 +29,14 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       # Runs a single command using the runners shell
-      - name: Docker build
+      - name: Docker build frontend
         run: |
-          docker build . -t blessingartcretor/ebilling-image
+          docker build ./frontend/ -t blessingartcretor/ebilling-frontend-image
 
       - name: Docker push
         run: |
-          docker push blessingartcreator/ebilling-image
+          docker push blessingartcretor/ebilling-frontend-image
+
+      - name: Docker build backend
+        run: |
+          docker build ./backend/ -t blessingartcretor/ebilling-backend-image
