--- a/.github/workflows/docker-ci-d.yml
+++ b/.github/workflows/docker-ci-d.yml
@@ -9,7 +9,6 @@ on:
     branches: [exam]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -30,14 +29,10 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       # Runs a single command using the runners shell
-      - name: Docker build frontend
+      - name: Docker build
         run: |
-          docker build ./frontend/ -t blessingartcretor/ebilling-frontend-image
+          docker build . -t blessingartcreator/ebilling-image
 
       - name: Docker push
         run: |
-          docker push blessingartcretor/ebilling-frontend-image
-
-      - name: Docker build backend
-        run: |
-          docker build ./backend/ -t blessingartcretor/ebilling-backend-image
+          docker push blessingartcreator/ebilling-image
